# PythonSeleniumProject

./: .bandit  .coverage  .env  .env.template  .flake8  .gitignore  .isort.cfg  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  FRAMEWORK_ENHANCEMENTS.md  LOCAL_DEV_GUIDE.md  LOCATOR_REFACTORING_SUMMARY.md  PARITY_ANALYSIS_REPORT.md  PART1_DOCUMENTATION_REFACTOR_SUMMARY.md  PRIORITY1_COMPLETION_REPORT.md  PYTEST_README.md  README.md  README_ENHANCED.md  README_NEW.md  RESUME_FOCUSED_PRIORITIES.md  RUFF_MIGRATION_GUIDE.md  STANDARDS.md  TEST_CLEANUP_SUMMARY.md  TEST_STATUS_REPORT.md  TUTORIAL.md  Taskfile.yml  commitlint.config.js  conftest.py  conftest_enhanced.py  dev-workflow.md  lefthook.yml  main.bak  manifest.sha256  pyproject.toml  pyproject.toml.bak  pytest-ci.ini  pytest.ini  renovate.json  requirements-dev.txt  requirements-enhanced.txt  (+9 more)
.agent/: rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture-debt.yml  bug.yml  feature.yml  parity-violation.yml
.github/prompts/: JS.prompt.md
.github/workflows/: ci.yml  full-tests.yml  nightly.yml  qa-automation.yml
archive/: MODERNIZATION_PROMPTS_ARCHIVED.md
components/: __init__.py  base_component.py  header_component.py
config/: __init__.py  capabilities.json  ci.yaml  constants.py  local.yaml  settings.py  simple_settings.py
data/: test_credentials.json  test_data.json
data/configs/: browser_config_local.yml  browser_settings_production.yml  browser_settings_qa.yml  browser_settings_test.yml
docs/: INDEX.md  ML_ANALYZER_GUIDE.md  TEST_RESULTS_EXPORT_GUIDE.md  ZERO-TO-HERO.md  ZERO_TO_HERO.md
docs/adr/: ADR-001-locator-mirroring.md  ADR-002-no-assertions-in-poms.md  ADR-003-no-selectors-in-specs.md  ADR-004-composition-over-inheritance.md  ADR-005-component-object-model.md  ADR-006-cypress-multitab-stub.md  ADR-007-test-parity-policy.md  ADR-008-test-data-builders.md  ADR-009-storage-state-reuse.md  ADR-010-dual-practice-site.md  ADR-011-bdd-coexistence.md  ADR-012-tooling-per-stack.md  ADR-013-multirepo-sync-strategy.md
docs/guides/: ANALYTICS_AND_REPORTING.md  API_TESTING.md  ERROR_RECOVERY_AND_MONITORING.md  LOCAL_DEV_GUIDE.md  PERFORMANCE_MONITORING.md  PLAYWRIGHT_INTEGRATION.md  PYTEST_README.md  PYTHON_AUTOMATION_CHEAT_SHEET.md  RECOMMENDATIONS.md  TEST_ANALYTICS.md  TEST_DATA_MANAGEMENT.md
documentation/: ANALYTICS_AND_REPORTING.md  API_TESTING.md  ERROR_RECOVERY_AND_MONITORING.md  INDEX.md  LOCAL_DEV_GUIDE.md  ML_INTEGRATION.md  PERFORMANCE_MONITORING.md  PLAYWRIGHT_INTEGRATION.md  PYTHON_AUTOMATION_CHEAT_SHEET.md  RECOMMENDATIONS.md  TEST_ANALYTICS.md  TEST_DATA_MANAGEMENT.md  ZERO-TO-HERO.md  ZERO_TO_HERO_TUTORIAL.md
locators/: bing_common_locators.py  google_result_locators.py  google_search_locators.py  playwright_search_engine_locators.py  result_page_locators.py  sauce_locators.py  search_engine_locators.py  test_framework_locators.py
locators/components/: __init__.py  header_locators.py
locators/practice/: __init__.py  alerts_locators.py  dropdown_locators.py  iframes_locators.py  selectors_locators.py  windows_locators.py
locators/sauce/: __init__.py  cart_locators.py  checkout_locators.py  inventory_locators.py  login_locators.py
pacts/: PythonSeleniumProject-JSONPlaceholder.json
pages/: base_page.py  base_page_enhanced.py  google_result_page.py  google_search_page.py  home_page.py  playwright_base_page.py  playwright_google_search_page.py  playwright_search_engine_page.py  result_page.py  sauce.py  search_engine_page.py
pages/practice/: __init__.py  alerts_page.py  dropdown_page.py  iframes_page.py  selectors_page.py  windows_page.py
pages/sauce/: __init__.py  cart_page.py  checkout_page.py  inventory_page.py  login_page.py
reports/: comprehensive_test_report.html  enhanced_test_report.html  full_test_report.html
screenshots/: search_selenium_automation
scripts/: audit_static_waits.sh  audit_violations.sh  check-sync.sh  generate_summary_json.js  normalize_results.py  run_ci_checks.sh  run_ci_checks_legacy.sh  run_full_workflow.py  run_tests.py  seed_db.py
tests/: helpers.py  test_allure_api.py  test_allure_google_search.py  test_api.py  test_diff.py  test_enhanced_working.py  test_example.py  test_framework_core.py  test_google_search.py  test_image_diff.py  test_phase2_enhanced_features.py  test_playwright_google_search.py  test_playwright_search_engine.py  test_playwright_simple.py  test_sauce.py  test_search_engine.py
tests/accessibility/: test_accessibility.py  test_lighthouse.py
tests/api/: test_api.py  test_contract.py
tests/backend/: test_api.py  test_contract.py  test_database.py  test_schema_validation.py
tests/integration/: test_e2e_flow.py  test_framework_core.py  test_framework_integration.py  test_image_diff.py  test_page_integration.py  test_playwright_visual_pytest_plugin.py
tests/pact/: test_jsonplaceholder_pact.py
tests/performance/: locustfile.py  test_benchmarks.py
tests/unit/: __init__.py  test_advanced_features.py  test_base_page.py  test_constants.py  test_core_framework_unit.py  test_core_functionality.py  test_diff_handler.py  test_framework_core.py  test_image_diff.py  test_integration.py  test_library_integrations.py  test_locators.py  test_logger.py  test_performance_monitor.py  test_phase2_features.py  test_playwright_factory.py  test_regression_protection.py  test_settings.py  test_smoke.py  test_sql_connection.py  test_sql_functions.py  test_sql_validation.py  test_structured_logger.py  test_webdriver_factory.py
tests/unit_backup_overkill/: test_playwright_base_page.py  test_playwright_factory.py  test_playwright_google_search_page.py  test_settings.py  test_sql_connection.py  test_webdriver_factory.py
tests/web/: test_accessibility.py  test_allure_search_engine.py  (+4 more)
utils/: diff_handler.py  error_handler.py  logger.py  ml_test_analyzer.py  otel.py  performance_monitor.py  playwright_factory.py  sql_connection.py  sql_connection_enhanced.py  structured_logger.py  test_analytics.py  test_data_manager.py  test_reporter.py  test_reporter_clean.py  webdriver_factory.py  webdriver_factory_enhanced.py
(+16 files in other folders)
