# ── Project metadata ──────────────────────────────────────────────────────────
[project]
name = "python-selenium-project"
version = "0.1.0"
description = "QA Portfolio — Python / Selenium Gold Standard"
requires-python = ">=3.13"

dependencies = [
    # Browser automation
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "playwright>=1.40.0",
    # Test framework & assertions
    "pytest>=8.3.0",
    "pytest-html>=4.1.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=14.0",
    "pytest-json-report>=1.5.0",
    "PyHamcrest>=2.1.0",
    # Reporting
    "allure-pytest>=2.13.0",
    # Test data builders
    "factory-boy>=3.3.0",
    "faker>=26.0.0",
    # Structured logging
    "structlog>=24.4.0",
    # Accessibility
    "axe-selenium-python>=2.1.6",
    # Utilities
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    # Architecture guardrails
    "import-linter>=2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.7.0",
    "lefthook>=1.7.0",
    "types-requests>=2.31.0",
]

[tool.uv]
package = false

# ── Ruff (linter + formatter — replaces flake8, black, isort, pylint) ─────────
[tool.ruff]
exclude = [
    "venv", "venv-enhanced", ".venv", "__pycache__", ".git",
    "build", "dist", "data/results", "reports", "test_reports",
    "logs", "screenshots", "screenshots_diff", "resources",
]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "BLE", # blind-except
    "FBT", # boolean-trap
    "A",   # flake8-builtins
    "COM", # trailing-comma
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "T",   # flake8-print
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "NPY", # numpy
    "AIR", # airflow
    "PERF",# perflint
    "FURB",# refurb
    "LOG", # flake8-logging-format
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SLOT",# flake8-slots
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "INT", # flake8-gettext
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "TD",  # flake8-todos
    "FIX", # flake8-fixme
    "RUF", # Ruff-specific rules
]

# Ignore some rules that are too strict or conflict with project style
ignore = [
    "COM812",  # trailing-comma: conflicts with Ruff formatter
    "E203",    # whitespace before ':' (conflicts with black)
    "E501",    # line-too-long: handled by formatter, allow long lines
    "T20",     # flake8-print: print found (allow in test/debug code)
    "S101",    # flake8-bandit: assert used (allow in tests)
    "PD",      # pandas-vet: too strict for this project
    "NPY",     # numpy: not using numpy extensively
    "AIR",     # airflow: not using airflow
    "ERA001",  # eradicate: commented-out code (allow for now)
    "FIX002",  # flake8-fixme: XXX comments (allow for now)
    "TD002",   # flake8-todos: TODO format (allow for now)
    "TD003",   # flake8-todos: TODO format (allow for now)
    "PLR0913", # pylint: too many arguments (allow for complex functions)
    "PLR0912", # pylint: too many branches (allow for complex logic)
    "PLR0915", # pylint: too many statements (allow for complex functions)
    "PLR2004", # pylint: magic value comparison (allow for now)
    "C901",    # mccabe: too complex (allow for complex algorithms)
    "PLR0911", # pylint: too many return statements (allow for complex logic)
    "TRY300",  # try-consider-else: allow return in try block
    "FBT001",  # boolean-positional-arg: allow boolean args
    "FBT002",  # boolean-default-value-positional-arg: allow boolean defaults
    "SLF001",  # private-member-access: allow in tests
    "ARG001",  # unused-function-argument: allow for callbacks/overrides
    "ARG002",  # unused-method-argument: allow for callbacks/overrides
    "TRY003",  # raise-vanilla-args: allow raising with string args
    "B008",    # function-call-in-default-argument: allow for factory patterns
    "BLE001",  # blind-except: allow in error handling code
    "PT011",   # pytest-raises-too-broad: allow broad raises
    "PT012",   # pytest-raises-with-multiple-statements: allow for clarity
    "RET505",  # superfluous-else-return: allow for clarity
    "RET506",  # superfluous-else-raise: allow for clarity
    "RET507",  # superfluous-else-continue: allow for clarity
    "RET508",  # superfluous-else-break: allow for clarity
    "SIM108",  # if-else-block-instead-of-if-exp: allow for clarity
    "SIM114",  # if-with-same-arms: allow for clarity
    "UP007",   # typing-union: allow Union for Python 3.9 compat
    "PTH123",  # pathlib-open: allow open() for simplicity
    "RUF012",  # mutable-class-default: allow for class-level defaults
    "RUF100",  # unused-noqa: auto-fix removes these
    "SIM105",  # suppressable-exception: allow try-except-pass pattern
    "A001",    # builtin-variable-shadowing: allow shadowing builtins
    "A002",    # builtin-argument-shadowing: allow shadowing in args
    "INP001",  # implicit-namespace-package: allow missing __init__.py
    "G004",    # logging-f-string: allow f-strings in logging
    "TID252",  # relative-imports: allow relative imports
    "PERF401", # manual-list-comprehension: allow for clarity
    "PERF402", # manual-list-copy: allow for clarity
    "PERF203", # try-except-in-loop: allow for error handling in loops
]

[tool.ruff.lint.per-file-ignores]
# Tests can be more lenient
"tests/**/*" = ["S101", "T20", "PLR2004"]
# Examples and scripts can have print statements
"examples/**/*" = ["T20"]
"scripts/**/*" = ["T20"]
# Configuration files can have various patterns
"config/**/*" = ["T20", "PLR2004"]

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity
max-complexity = 15

[tool.ruff.lint.pylint]
# Maximum number of arguments
max-args = 10
# Maximum number of branches
max-branches = 20
# Maximum number of statements
max-statements = 50


# ── import-linter architecture contracts ──────────────────────────────────────
[tool.importlinter]
root_packages = ["pages", "locators", "components", "utils", "config", "tests"]

[[tool.importlinter.contracts]]
name = "Pages must not import from tests"
type = "forbidden"
source_modules = ["pages"]
forbidden_modules = ["tests"]

[[tool.importlinter.contracts]]
name = "Locators must not import from tests or utils"
type = "forbidden"
source_modules = ["locators"]
forbidden_modules = ["tests", "utils"]

[[tool.importlinter.contracts]]
name = "Components must not import from tests"
type = "forbidden"
source_modules = ["components"]
forbidden_modules = ["tests"]
